bpy.ops.object.add_named() doesnt work with unlinked objects #38689

Closed
opened 2014-02-17 22:43:36 +01:00 by Walid Shouman · 8 comments
Member

System Information
Operating system and graphics card
Ubuntu 12.04 x64 Nvidia 650

Blender Version
Broken: 2.69.10

Short description of error
bpy.ops.object.add_named() doesnt work with linked set to false

Exact steps for others to reproduce the error
open a new file
execute

bpy.ops.object.add_named(linked=False, name="MyObj")
**System Information** Operating system and graphics card Ubuntu 12.04 x64 Nvidia 650 **Blender Version** Broken: 2.69.10 **Short description of error** bpy.ops.object.add_named() doesnt work with linked set to false **Exact steps for others to reproduce the error** open a new file execute ``` bpy.ops.object.add_named(linked=False, name="MyObj") ```
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @WalidShouman

Added subscriber: @WalidShouman

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto self-assigned this 2014-02-17 23:18:08 +01:00

It does work. In fact linked is False by default.

How to see that working:

  1. load factory settings
  2. bpy.ops.add_named(linked=False, name="Cube")

(note, the name needs to match an existent object, maybe that's your problem?).
Closing it by now, but I can re-open if you still have this issue.

It does work. In fact linked is False by default. How to see that working: 1) load factory settings 2) bpy.ops.add_named(linked=False, name="Cube") (note, the name needs to match an existent object, maybe that's your problem?). Closing it by now, but I can re-open if you still have this issue.

I pushed a "fix" for this : 3d7e0aae52
Basically you now get an error message to your problem, it should help to clarify what is the issue in your file.

I pushed a "fix" for this : 3d7e0aae52c9d30739a001826c3f6b3331270f36 Basically you now get an error message to your problem, it should help to clarify what is the issue in your file.
Author
Member

According to http://www.blender.org/documentation/blender_python_api_2_69_10/bpy.ops.object.html the API lists that it adds a new object -and not duplicates meshes from an existing one-, also the name suggests that too!

I may only consider it a fix not to break compatibility as we already have another way to make a new named object

bpy.data.objects.new()
According to http://www.blender.org/documentation/blender_python_api_2_69_10/bpy.ops.object.html the API lists that it adds a new object -and not duplicates meshes from an existing one-, also the name suggests that too! I may only consider it a fix not to break compatibility as we already have another way to make a new named object ``` bpy.data.objects.new() ```

Added subscriber: @Ton

Added subscriber: @Ton

@Ton do you want to chime in here? It seems you created this operator to use with drag&drop.

@Ton do you want to chime in here? It seems you created this operator to use with drag&drop.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38689
No description provided.