bpy.ops.object.add_named() doesnt provide error when failed (related to T38689)